--- a/blueprint/src/subsections/construct-a-b.tex
+++ b/blueprint/src/subsections/construct-a-b.tex
@@ -10,7 +10,7 @@ which double zeroes at all $\Lambda_8$-vectors of length greater than $\sqrt{2}$
 
 First, we will define function $a$. To this end we consider the following functions:
 \begin{definition}\label{def:phi4-phi2-phi0}
-\uses{def:Ek,def:E2}
+\uses{ModularForm.eisensteinSeries_MF, E₂_eq}
 \begin{align}
     \phi_{-4} &:= \frac{E_4^2}{\Delta} \label{eqn: def phi4} \\
     \phi_{-2} &:= \frac{E_4(E_2 E_4 - E_6)}{\Delta} \label{eqn: def phi2} \\
@@ -31,7 +31,7 @@ First, we will define function $a$. To this end we consider the following functi
 
 The function $\phi_0(z)$ is not modular; however, it satisfies the following transformation rules:
 
-\begin{lemma}\label{lemma:phi0-transform}\uses{def:phi4-phi2-phi0, lemma:Ek-is-modular-form, lemma:E2-transform-S, lemma:disc-cuspform}
+\begin{lemma}\label{lemma:phi0-transform}\uses{def:phi4-phi2-phi0, EisensteinSeries.eisensteinSeries_SIF, E₂_transform, Delta}
 We have
 \begin{align}
     \phi_0(z + 1) &= \phi_0(z) \label{eqn:phi0-trans-T} \\
@@ -50,57 +50,21 @@ For \eqref{eqn:phi0-trans-S},
 \end{align}
 \end{proof}
 
-\begin{definition}\label{def:a-definition}\lean{MagicFunction.a.RadialFunctions.a}\leanok
-\uses{def:phi4-phi2-phi0}
-For $x\in\R^8$ we define
-\begin{align}\label{eqn:a-definition}
-    a(x):=&\int\limits_{-1}^i\phi_0\Big(\frac{-1}{z+1}\Big)\,(z+1)^2\,e^{\pi i \|x\|^2 z}\,dz
-    +\int\limits_{1}^i\phi_0\Big(\frac{-1}{z-1}\Big)\,(z-1)^2\,e^{\pi i \|x\|^2 z}\,dz\\
-    -&2\int\limits_{0}^i\phi_0\Big(\frac{-1}{z}\Big)\,z^2\,e^{\pi i \|x\|^2 z}\,dz
-    +2\int\limits_{i}^{i\infty}\phi_0(z)\,e^{\pi i \|x\|^2 z}\,dz.\nonumber
-\end{align}
-\end{definition}
+\inputleannode{MagicFunction.a.RadialFunctions.a}
 
 We observe that the contour integrals in \eqref{eqn:a-definition} converge absolutely and uniformly for $x\in\R^8$.
 Indeed, $\phi_0(z)=O(e^{2\pi i z})$ as $\Im(z)\to \infty$. Therefore, $a(x)$ is well defined. Now we prove that $a$ satisfies condition \eqref{eqn:a-fourier}.
 The following lemma will be used to prove Schwartzness of $a$ and $b$.
 
 
-\begin{lemma}\label{lemma:mod-div-disc-bound}\lean{MagicFunction.PolyFourierCoeffBound.DivDiscBoundOfPolyFourierCoeff}\leanok
-Let $f(z)$ be a holomorphic function with a Fourier expansion
-\begin{equation}
-    f(z) = \sum_{n \ge n_0} c_f(n) e^{\pi i n z}
-\end{equation}
-with $c_f(n_0) \ne 0$.
-Assume that $c_f(n)$ has a polynomial growth, i.e. $|c_f(n)| = O(n^k)$ for some $k \in \N$.
-Then there exists a constant $C_f > 0$ such that
-\begin{equation}
-    \left|\frac{f(z)}{\Delta(z)}\right| \le C_f e^{-\pi (n_0 - 2) \Im z}
-\end{equation}
-for all $z$ with $\Im z > 1/2$.
-\end{lemma}
+\inputleannode{MagicFunction.PolyFourierCoeffBound.DivDiscBoundOfPolyFourierCoeff}
 
 
-\begin{proof}\uses{def:disc-definition}\leanok
-By the product formula \eqref{eqn:disc-definition},
-\begin{align}
-    \left|\frac{f(z)}{\Delta(z)}\right| &= \left|\frac{\sum_{n \ge n_0} c_f(n) e^{\pi i n z}}{e^{2 \pi i z}\prod_{n \ge 1} (1 - e^{2\pi i n z})^{24}}\right| \\
-    &= |e^{\pi i (n_0 - 2)z}| \cdot \frac{|\sum_{n \ge n_0} c_f(n) e^{\pi i (n - n_0) z}|}{\prod_{n \ge 1} |1 - e^{2\pi i n z}|^{24}} \\
-    &\le e^{-\pi (n_0 - 2) \Im z} \cdot \frac{\sum_{n \ge n_0} |c_f(n)| e^{-\pi (n - n_0) \Im z}}{\prod_{n \ge 1} (1 - e^{- 2\pi n \Im z})^{24}} \\
-    &\le e^{-\pi (n_0 - 2) \Im z} \cdot \frac{\sum_{n \ge n_0} |c_f(n)| e^{-\pi (n - n_0) / 2}}{\prod_{n \ge 1} (1 - e^{-\pi n})^{24}} \\
-    &= C_f \cdot e^{-\pi (n_0 - 2) \Im z}
-\end{align}
-where
-\begin{equation}
-    C_f = \frac{\sum_{n \ge n_0} |c_f(n)| e^{-\pi (n - n_0) / 2}}{\prod_{n \ge 1} (1 - e^{-\pi n})^{24}}.
-\end{equation}
-Note that the summation in the numerator converges absolutely because of polynomial growth.
-The denominator also converges, which is simply $e^{\pi} \cdot \Delta(i/2)$.
-\end{proof}
+
 
 As corollaries, we have the following bound for $\phi_0$, $\phi_{-2}$, and $\phi_{-4}$.
 
-\begin{corollary}\label{cor:phi0-bound}\uses{thm:ramanujan-formula, lemma:mod-div-disc-bound, lemma:Ek-Fourier, lemma:mod_form_poly_growth}
+\begin{corollary}\label{cor:phi0-bound}\uses{ramanujan_E₂, MagicFunction.PolyFourierCoeffBound.DivDiscBoundOfPolyFourierCoeff, E_k_q_expansion, lemma:mod_form_poly_growth}
 There exists a constant $C_0 > 0$ such that
 \begin{equation}\label{eqn:phi0-bound}
 |\phi_0(z)| \le C_0 e^{-2 \pi \Im z}
@@ -112,10 +76,10 @@ By Ramanujan's formula, $E_2 E_4 - E_6 = 3E_4' = 720 \sum_{n \ge 1} n \sigma_3(n
 \begin{equation}
     (E_2(z) E_4(z) - E_6(z))^{2} = 720^{2} e^{4 \pi i z} + O(e^{5 \pi i z}). \notag
 \end{equation}
-Then the result follows from Lemma~\ref{lemma:mod-div-disc-bound} with $f(z) = (E_2 E_4 - E_6)^2$ and $n_0 = 4$.
+Then the result follows from Lemma~\ref{MagicFunction.PolyFourierCoeffBound.DivDiscBoundOfPolyFourierCoeff} with $f(z) = (E_2 E_4 - E_6)^2$ and $n_0 = 4$.
 \end{proof}
 
-\begin{corollary}\label{cor:phi2-bound}\uses{def:phi4-phi2-phi0, lemma:mod-div-disc-bound, lemma:Ek-Fourier}
+\begin{corollary}\label{cor:phi2-bound}\uses{def:phi4-phi2-phi0, MagicFunction.PolyFourierCoeffBound.DivDiscBoundOfPolyFourierCoeff, E_k_q_expansion}
 There exists a constant $C_{-2} > 0$ such that
 \begin{equation}\label{eqn:phi2-bound}
     |\phi_{-2}(z)| \le C_{-2}
@@ -123,7 +87,7 @@ There exists a constant $C_{-2} > 0$ such that
 for all $z$ with $\Im z > 1/2$.
 \end{corollary}
 
-\begin{corollary}\label{cor:phi4-bound}\uses{def:phi4-phi2-phi0, lemma:mod-div-disc-bound, lemma:Ek-Fourier}
+\begin{corollary}\label{cor:phi4-bound}\uses{def:phi4-phi2-phi0, MagicFunction.PolyFourierCoeffBound.DivDiscBoundOfPolyFourierCoeff, E_k_q_expansion}
 There exists a constant $C_{-4} > 0$ such that
 \begin{equation}\label{eqn:phi4-bound}
     |\phi_{-4}(z)| \le C_{-4} e^{2 \pi \Im z}
@@ -138,61 +102,11 @@ Note that we can take the constants $C_0$, $C_{-2}$, and $C_{-4}$ as
     C_{-4} &= e^{-\pi} \cdot \frac{E_4(i/2)^{2}}{\Delta(i/2)}. \notag
 \end{align}
 
-\begin{proposition}\label{prop:a-schwartz}\lean{MagicFunction.FourierEigenfunctions.a}\leanok
-\uses{def:a-definition, cor:phi0-bound}
-$a(x)$ is a Schwartz function.
-\end{proposition}
-\begin{proof}
-We estimate the first summand in the right-hand side of \eqref{eqn:a-definition}.
-By \eqref{eqn:phi0-bound}, we have
-\begin{align}
-    &\left|\int\limits_{-1}^{i}\phi_0\Big(\frac{-1}{z+1}\Big)\,(z+1)^2\,e^{\pi i r^2 z}\,dz\right|=\left|\int\limits_{i\infty}^{-1/(i+1)}\phi_0(z)\,z^{-4}\,e^{\pi i r^2 (-1/z-1)}\,dz\right|\leq \notag\\
-    &C_1\int\limits_{1/2}^{\infty}e^{-2\pi t}\,e^{-\pi    r^2/t}\,dt\leq C_1\int\limits_{0}^{\infty}e^{-2\pi t}\,e^{-\pi    r^2/t}\,dt=C_2\,r\,K_1(2\sqrt{2}\,\pi\,r)\notag
-\end{align}
-where $C_1$ and $C_2$ are some positive constants and $K_\alpha(x)$ is the modified Bessel function of the second kind defined as in \cite[Section~9.6]{Abramowitz}. This estimate also holds for the second and third summand in \eqref{eqn:a-definition}.
-For the last summand we have
-\begin{equation}
-\left|\int\limits_{i}^{i\infty}\phi_0(z)\,e^{\pi i r^2 z}\,dz\right|\leq C\,\int\limits_{1}^{\infty} e^{-2\pi t}\,e^{-\pi r^2 t}\,dt=C_3\frac{e^{\pi(r^2+2)}}{r^2+2}.
-\end{equation}
-Therefore, we arrive at
-\begin{equation}
-    |a(r)|\leq 4C_2\,r\,K_1(2\sqrt{2}\pi r)+2C_3\frac{e^{-\pi(r^2+2)}}{r^2+2}.
-\end{equation}
-It is easy to see that the left hand side of this inequality decays faster then any inverse power of $r$. Analogous estimates can be obtained for all derivatives $\frac{\dd^k}{\dd r^k}a(r)$.
-\end{proof}
+\inputleannode{MagicFunction.FourierEigenfunctions.a}
 
-\begin{proposition}\label{prop:a-fourier}
-\uses{lemma:Ek-Fourier, def:E2, def:a-definition, lemma:Gaussian-Fourier, prop:a-schwartz}\lean{MagicFunction.a.Fourier.eig_a}
-$a(x)$ satisfies \eqref{eqn:a-fourier}.
-\end{proposition}
-\begin{proof}
-We recall that the Fourier transform of a Gaussian function is
-\begin{equation}\label{eqn:gaussian Fourier}
-    \mathcal{F}(e^{\pi i \|x\|^2 z})(y)=z^{-4}\,e^{\pi i \|y\|^2 \,(\frac{-1}{z}) }.
-\end{equation}
-Next, we exchange the contour integration with respect to $z$ variable and Fourier transform with respect to $x$ variable in \eqref{eqn:a-definition}.
-This can be done, since the corresponding double integral converges absolutely. In this way we obtain
-\begin{align}
-    \widehat{a}(y)=&\int\limits_{-1}^i\phi_0\Big(\frac{-1}{z+1}\Big)\,(z+1)^2\,z^{-4}\,e^{\pi i \|y\|^2 \,(\frac{-1}{z})}\,dz
-    +\int\limits_{1}^i\phi_0\Big(\frac{-1}{z-1}\Big)\,(z-1)^2\,z^{-4}\,e^{\pi i \|y\|^2 \,(\frac{-1}{z})}\,dz\notag \\
-    -&2\int\limits_{0}^i\phi_0\Big(\frac{-1}{z}\Big)\,z^2\,z^{-4}\,e^{\pi i \|y\|^2 \,(\frac{-1}{z})}\,dz +2\int\limits_{i}^{i\infty}\phi_0(z)\,z^{-4}\,e^{\pi i \|y\|^2 \,(\frac{-1}{z})}\,dz.\notag
-\end{align}
-Now we make a change of variables $w=\frac{-1}{z}$. We obtain
-\begin{align}
-    \widehat{a}(y)=&\int\limits_{1}^i\phi_0\Big(1-\frac{1}{w-1}\Big)\,(\frac{-1}{w}+1)^2\,w^{2}\,e^{\pi i \|y\|^2 \,w}\,dw\notag\\
-    +&\int\limits_{-1}^i\phi_0\Big(1-\frac{1}{w+1}\Big)\,(\frac{-1}{w}-1)^2\,w^2\,e^{\pi i \|y\|^2 \,w}\,dw\\
-    -&2\int\limits_{i \infty}^i\phi_0(w)\,e^{\pi i \|y\|^2 \,w}\,dw +2\int\limits_{i}^{0}\phi_0\Big(\frac{-1}{w}\Big)\,w^{2}\,e^{\pi i \|y\|^2 \,w}\,dw.\notag
-\end{align}
-Since $\phi_0$ is $1$-periodic we have
-\begin{align}
-    \widehat{a}(y)\,=\,&\int\limits_{1}^i\phi_0\Big(\frac{-1}{z-1}\Big)\,(z-1)^2\,e^{\pi i \|y\|^2 \,z}\,dz
-    +\int\limits_{-1}^i\phi_0\Big(\frac{-1}{z+1}\Big)\,(z+1)^2\,e^{\pi i \|y\|^2 \,z}\,dz\notag \\
-    +&2\int\limits_{i}^{i\infty}\phi_0(z)\,e^{\pi i \|y\|^2 \,z}\,dz
-    -2\int\limits_{0}^{i}\phi_0\Big(\frac{-1}{z}\Big)\,z^{2}\,e^{\pi i \|y\|^2 \,z}\,dz\notag \\
-    \,=\,&a(y).
-\end{align}
-This finishes the proof of the proposition.
-\end{proof}
+
+\inputleannode{MagicFunction.a.Fourier.eig_a}
+
 
 Next, we check that $a$ has double zeroes at all $\Lambda_8$-lattice points of length greater then $\sqrt{2}$.
 Using \eqref{eqn:phi0-bound}, \eqref{eqn:phi2-bound}, and \eqref{eqn:phi4-bound}, we can control the behavior of $\phi_0$ near $0$ and $i\infty$.
@@ -216,7 +130,7 @@ For the second estimate, by \eqref{eqn:phi0-trans-S}, \eqref{eqn:phi2-bound}, an
 
 \begin{proposition}
 \label{prop:a-double-zeros}
-\uses{cor:phi0-near-0-infty, def:a-definition, cor:disc-nonvanishing}
+\uses{cor:phi0-near-0-infty, MagicFunction.a.RadialFunctions.a, Δ_ne_zero}
 For $r>\sqrt{2}$ we can express $a(r)$ in the following form
 \begin{equation}\label{eqn: a double zeroes}
     a(r)=-4\sin(\pi r^2/2)^2\,\int\limits_{0}^{i\infty}\phi_0\Big(\frac{-1}{z}\Big)\,z^2\,e^{\pi i r^2 \,z}\,dz.
@@ -262,7 +176,7 @@ This finishes the proof.
 
 Finally, we find another convenient integral representation for $a$ and compute values of $a(r)$ at $r=0$ and $r=\sqrt{2}$.
 
-\begin{proposition}\label{prop:a-another-integral}\uses{prop:a-double-zeros, def:phi4-phi2-phi0, lemma:phi0-transform, def:a-definition}
+\begin{proposition}\label{prop:a-another-integral}\uses{prop:a-double-zeros, def:phi4-phi2-phi0, lemma:phi0-transform, MagicFunction.a.RadialFunctions.a}
 For $r\geq0$ we have
 \begin{align}\label{eqn:a-another-integral}a(r)=&4i\,\sin(\pi r^2/2)^2\,\Bigg(\frac{36}{\pi^3\,(r^2-2)}-\frac{8640}{\pi^3\,r^4}+\frac{18144}{\pi^3\,r^2}\\ +&\int\limits_0^\infty\,\left(t^2\,\phi_0\Big(\frac{i}{t}\Big)-\frac{36}{\pi^2}\,e^{2\pi t}+\frac{8640}{\pi}\,t-\frac{18144}{\pi^2}\right)\,e^{-\pi r^2 t}\,dt \Bigg) .\notag\end{align}
 The integral converges absolutely for all $r\in\R_{\geq 0}$.
@@ -284,17 +198,8 @@ On the other hand, from the definition~\eqref{eqn:a-definition} we see that $a(r
 \end{proof}
 From the identity~\eqref{eqn:a-another-integral} we see that the values $a(r)$ are in $i\R$ for all $r\in\R_{\geq0}$.
 % In particular, we have
-\begin{proposition}\label{prop:a0}\uses{prop:a-another-integral}\lean{MagicFunction.a.SpecialValues.a_zero}\leanok
-We have $a(0) = -\frac{i}{8640}$.
-% \begin{equation}
-% a(0)=\frac{-i\,8640}{\pi}\qquad
-% a(\sqrt{2})=0\qquad
-% a^\prime(\sqrt{2})=\frac{i\,72\sqrt{2}}{\pi}.
-% \end{equation}
-\end{proposition}
-\begin{proof}
-These identities follow immediately from the previous proposition.
-\end{proof}
+\inputleannode{MagicFunction.a.SpecialValues.a_zero}
+
 
 Now we construct function $b$. To this end we consider the function
 \begin{definition}\label{def: h}\uses{def:H2-H3-H4}
@@ -326,24 +231,9 @@ We define the following three functions
     \psi_S\,:=\,&\psi_I|_{-2}S. \label{eqn:psiS-define}
 \end{align}
 \end{definition}
-\begin{lemma}\label{lemma: psi I psi T psi S explicit}\uses{def:psiI-psiT-psiS}\lean{ψI_eq}
-More explicitly, we have
-% \begin{align}
-% \psi_I(z)\,=\,&128\,\frac{\theta_{00}^4(z)+\theta_{01}^4(z)}{\theta_{10}^8(z)}\,+\,128
-%                             \frac{\theta_{01}^4(z)-\theta_{10}^4(z)}{\theta_{00}^8(z)}\label{eqn:psiI-explicit}\\
-% \psi_T(z)\,=\,&128\,\frac{\theta_{00}^4(z)+\theta_{01}^4(z)}{\theta_{10}^8(z)}\,+
-%                             \,128\,\frac{\theta_{00}^4(z)+\theta_{10}^4(z)}{\theta_{01}^8(z)}\label{eqn:psiT-explicit}\\
-% \psi_S(z)\,=\,&-128\,\frac{\theta_{00}^4(z)+\theta_{10}^4(z)}{\theta_{01}^8(z)}-128\,
-%                             \frac{\theta_{10}^4(z)-\theta_{01}^4(z)}{\theta_{00}^8(z)}.\label{eqn:psiS-explicit}
-% \end{align}
-\begin{align}
-    \psi_I(z) &= 128 \frac{H_3(z) + H_4(z)}{H_2(z)^2} + 128 \frac{H_4(z) - H_2(z)}{H_3(z)^2} \label{eqn:psiI-explicit} \\
-    \psi_T(z) &= 128 \frac{H_3(z) + H_4(z)}{H_2(z)^2} + 128 \frac{H_2(z) + H_3(z)}{H_4(z)^2} \label{eqn:psiT-explicit} \\
-    \psi_S(z) &= -128 \frac{H_2(z) + H_3(z)}{H_4(z)^2} - 128 \frac{H_2(z) - H_4(z)}{H_3(z)^2} \label{eqn:psiS-explicit}
-\end{align}
-\end{lemma}
+\inputleannode{ψI_eq}
 
-\begin{lemma}\label{lemma:psiI-psiT-psiS-fourier}\uses{lemma: psi I psi T psi S explicit}
+\begin{lemma}\label{lemma:psiI-psiT-psiS-fourier}\uses{ψI_eq}
 The Fourier expansions of these functions are
 \begin{align}
     \psi_I(z)\,=\,&q^{-1} + 144 - 5120 q^{1/2} + 70524 q - 626688 q^{3/2} + 4265600 q^2 + O(q^{5/2}) \label{eqn: psi fourier I}\\
@@ -363,7 +253,7 @@ For $x\in\R^8$ define
 
 Now we prove that $b$ is a Schwartz function and satisfies condition \eqref{eqn:b-fourier}.
 
-\begin{lemma}\label{lemma:psiS-new}\uses{lemma: psi I psi T psi S explicit, lemma:lv1-lv2-identities, lemma:jacobi-identity}
+\begin{lemma}\label{lemma:psiS-new}\uses{ψI_eq, lemma:lv1-lv2-identities, lemma:jacobi-identity}
 $\psi_S(z)$ can be written as
 \begin{equation}\label{eqn:psiS-new}
     \psi_S(z) = -\frac{H_2^3 (2 H_2^3 + 5 H_2 H_4 + 5 H_4^2)}{2 \Delta}.
@@ -381,7 +271,7 @@ Using \eqref{eqn:psiS-explicit} and \eqref{eqn:jacobi-identity} gives
 \end{align}
 \end{proof}
 
-\begin{lemma}\label{lemma:psiS-bound}\uses{lemma:psiS-new, lemma:mod-div-disc-bound, prop:H2-fourier, prop:H3-fourier, prop:H4-fourier}
+\begin{lemma}\label{lemma:psiS-bound}\uses{lemma:psiS-new, MagicFunction.PolyFourierCoeffBound.DivDiscBoundOfPolyFourierCoeff, prop:H2-fourier, prop:H3-fourier, prop:H4-fourier}
 There exists a constant $C_S > 0$ such that
 \begin{equation}\label{eqn:psiS-bound}
     |\psi_S(z)| \le C_S e^{- \pi \Im z}
@@ -395,67 +285,17 @@ By Proposition \ref{prop:H2-fourier}, \ref{prop:H3-fourier} and \ref{prop:H4-fou
     H_2(z)^3 (2 H_2(z)^2 + 5 H_2(z) H_4(z) + 5 H_4(z)^2) = \sum_{n \ge 3} a_n e^{\pi i n z}
 \end{equation}
 with $a_3 = 16^3 \cdot 5 = 20480$ and $a_n = O(n^k)$ for some $k > 0$.
-Now the result follows from Lemma \ref{lemma:mod-div-disc-bound}.
+Now the result follows from Lemma \ref{MagicFunction.PolyFourierCoeffBound.DivDiscBoundOfPolyFourierCoeff}.
 \end{proof}
 
-\begin{proposition}\label{prop:b-schwartz}\uses{lemma:psiS-bound}\lean{MagicFunction.FourierEigenfunctions.b}\leanok
-$b(x)$ is a Schwartz function.
-\end{proposition}
-\begin{proof}
-We have
-\begin{align}
-    &\int\limits_{-1}^{i}\psi_T(z)\,e^{\pi i r^2 z}\,dz=\int\limits_{0}^{i+1}\psi_I(z)\,e^{\pi i r^2 (z-1)}\,dz=\notag\\
-    &\int\limits_{i\infty}^{-1/(i+1)}\psi_I\Big(\frac{-1}{z}\Big)\,e^{\pi i r^2 (-1/z-1)}\,z^{-2}\,dz=\int\limits_{i\infty}^{-1/(i+1)}\psi_S(z)\,z^{-4}\,e^{\pi i r^2 (-1/z-1)}\,dz.\notag
-\end{align}
-Using \eqref{eqn:psiS-bound}, we can estimate the first summand in the left-hand side of~\eqref{eqn:b-definition}
-\begin{equation}
-    \left|\int\limits_{-1}^i \psi_T(z)\,e^{\pi i r^2 z}\,dz \right|\leq C_1\,r\,K_1(2\pi r).
-\end{equation}
-We combine this inequality with analogous estimates for the other three summands and obtain
-\begin{equation}
-    |b(r)|\leq C_2\,r\,K_1(2\pi r)+C_3\,\frac{e^{-\pi(r^2+1)}}{r^2+1}.
-\end{equation}
-Here $C_1$, $C_2$, and $C_3$ are some positive constants. Similar estimates hold for all derivatives $\frac{\dd^k}{\dd^k r} b(r)$.
-\end{proof}
+\inputleannode{MagicFunction.FourierEigenfunctions.b}
 
-\begin{proposition}\label{prop:b-fourier}\uses{def:b-definition, lemma:Gaussian-Fourier, def:psiI-psiT-psiS, prop:b-schwartz}\lean{MagicFunction.b.Fourier.eig_b}\leanok
-$b(x)$ satisfies \eqref{eqn:b-fourier}.
-\end{proposition}
-\begin{proof}
-Here, we repeat the arguments used in the proof of Proposition~\ref{prop:a-fourier}.
-We use identity~\eqref{eqn:gaussian Fourier} and change contour integration in $z$ and Fourier transform in $x$. Thus we obtain
-\begin{align}
-    \mathcal{F}(b)(x)= & \int\limits_{-1}^{i}\psi_T(z)\,z^{-4}\,e^{\pi i \|x\|^2 (\frac{-1}{z})}\,dz
-        + \int\limits_{1}^{i}\psi_T(z)\,z^{-4}\,e^{\pi i \|x\|^2 (\frac{-1}{z})}\,dz \notag \\
-    -& 2\,\int\limits_{0}^{i}\psi_I(z)\,z^{-4}\,e^{\pi i \|x\|^2 (\frac{-1}{z})}\,dz
-    - 2\,\int\limits_{i}^{i\infty}\psi_S(z)\,z^{-4}\,e^{\pi i \|x\|^2 (\frac{-1}{z})}\,dz. \notag
-\end{align}
-We make the change of variables $w=\frac{-1}{z}$ and arrive at
-\begin{align}
-    \mathcal{F}(b)(x)= & \int\limits_{1}^{i}\psi_T\Big(\frac{-1}{w}\Big)\,w^{2}\,e^{\pi i \|x\|^2 w}\,dw
-        + \int\limits_{-1}^{i}\psi_T\Big(\frac{-1}{w}\Big)\,w^{2}\,e^{\pi i \|x\|^2 w}\,dw \notag \\
-    -& 2\,\int\limits_{i\infty}^{i}\psi_I\Big(\frac{-1}{w}\Big)\,w^{2}\,e^{\pi i \|x\|^2 w}\,dw
-    - 2\,\int\limits_{i}^{0}\psi_S\Big(\frac{-1}{w}\Big)\,w^{2}\,e^{\pi i \|x\|^2 w}\,dw.\notag
-\end{align}
-Now we observe that the definitions \eqref{eqn:psiI-define}--\eqref{eqn:psiS-define} imply
-\begin{align}
-    \psi_T|_{-2}S=&-\psi_T \notag \\
-    \psi_I|_{-2}S=&\psi_S \notag \\
-    \psi_S|_{-2}S=&\psi_I. \notag
-\end{align}
-Therefore, we arrive at
-\begin{align}
-    \mathcal{F}(b)(x)= & \int\limits_{1}^{i}-\psi_T(z)\,e^{\pi i \|x\|^2 z}\,dz
-        + \int\limits_{-1}^{i}-\psi_T(z)\,e^{\pi i \|x\|^2 z}\,dz \notag \\
-    +& 2\,\int\limits_{i}^{i\infty}\psi_S(z)\,e^{\pi i \|x\|^2 z}\,dz
-    + 2\,\int\limits_{0}^{i}\psi_I(z)\,e^{\pi i \|x\|^2 w}\,dw.\notag
-\end{align}
-Now from~\eqref{eqn:b-definition} we see that
-$$ \mathcal{F}(b)(x)=-b(x). $$
-\end{proof}
+
+\inputleannode{MagicFunction.b.Fourier.eig_b}
+
 Now we regard the radial function $b$ as a function on $\R_{\geq0}$. We check that $b$ has double roots at $\Lambda_8$-points.
 
-\begin{lemma}\label{lemma:psiI-bound}\uses{lemma:mod-div-disc-bound, prop:H2-fourier, prop:H3-fourier, prop:H4-fourier, def:psiI-psiT-psiS, lemma:theta-transform-S-T, lemma:disc-cuspform}
+\begin{lemma}\label{lemma:psiI-bound}\uses{MagicFunction.PolyFourierCoeffBound.DivDiscBoundOfPolyFourierCoeff, prop:H2-fourier, prop:H3-fourier, prop:H4-fourier, def:psiI-psiT-psiS, H₂_T_action, Delta}
 There exists a constant $C_I > 0$ such that
 \begin{equation}
     |\psi_I(z)| \le C_I e^{2 \pi \Im z}
@@ -467,7 +307,7 @@ By \eqref{eqn:psiS-new}, \eqref{eqn:psiS-define}, \eqref{eqn:H2-transform-S}, an
 \begin{equation}
     \psi_I(z) = \frac{H_4^3(2 H_4^2 + 5 H_4 H_2 + 5 H_2^2)}{2 \Delta}.
 \end{equation}
-The denominator is not a cusp form (i.e. has a nonzero constant term), hence Lemma \ref{lemma:mod-div-disc-bound} concludes the proof with $n_0 = 0$.
+The denominator is not a cusp form (i.e. has a nonzero constant term), hence Lemma \ref{MagicFunction.PolyFourierCoeffBound.DivDiscBoundOfPolyFourierCoeff} concludes the proof with $n_0 = 0$.
 \end{proof}
 
 \begin{corollary}\label{cor:psiI-near-0-infty}\uses{lemma:psiI-bound, lemma:psiS-bound, def:psiI-psiT-psiS}
@@ -486,7 +326,7 @@ and combined with \eqref{eqn:psiS-bound} we get \eqref{eqn:psiI-near-0}.
 \eqref{eqn:psiI-near-infty} follows from Lemma \ref{lemma:psiI-bound}.
 \end{proof}
 
-\begin{proposition}\label{prop:b-double-zeros}\uses{lemma:psiI-psiT-psiS-fourier, def:psiI-psiT-psiS, cor:psiI-near-0-infty, cor:disc-nonvanishing}
+\begin{proposition}\label{prop:b-double-zeros}\uses{lemma:psiI-psiT-psiS-fourier, def:psiI-psiT-psiS, cor:psiI-near-0-infty, Δ_ne_zero}
 For $r>\sqrt{2}$ function $b(r)$ can be expressed as
 \begin{equation}\label{eqn: b double zeroes}
     b(r)=-4\sin(\pi r^2/2)^2\,\int\limits_{0}^{i\infty}\psi_I(z)\,e^{\pi i r^2 \,z}\,dz.
@@ -554,14 +394,4 @@ On the other hand, from the definition \eqref{eqn:b-definition} we see that $b(r
 We see from \eqref{eqn:b-another-integral} that $b(r)\in i\R$ far all $r\in\R_\geq{0}$.
 Another immediate corollary of this proposition is
 
-\begin{proposition}\label{prop:b0}\uses{prop:b-another-integral}\lean{MagicFunction.b.SpecialValues.b_zero}\leanok
-We have $b(0) = 0$.
-% \begin{equation}\label{eqn: b values}
-% b(0)=0\qquad
-% % b(\sqrt{2})=0\qquad
-% % b^\prime(\sqrt{2})=\frac{i}{2\sqrt{2}\,\pi}.
-% \end{equation}
-\end{proposition}
-\begin{proof}
-    These identities follow immediately from the previous proposition. % Mentioning this here because this should not be \leanok-ed (yet).
-\end{proof}
+\inputleannode{MagicFunction.b.SpecialValues.b_zero}
