--- a/blueprint/src/subsections/lattice-periodic-packings.tex
+++ b/blueprint/src/subsections/lattice-periodic-packings.tex
@@ -2,19 +2,14 @@
 
 We begin by defining what a lattice is in Euclidean space.
 
-\begin{definition}\label{IsZLattice}\lean{IsZLattice}\leanok
-  We say that an additive subgroup $\Lambda \leq \R^d$ is a \emph{lattice} if it is discrete and its $\R$-span contains all the elements of $\R^d$.
-\end{definition}
+\inputleannode{IsZLattice}
 
 There is also a corresponding dual notion, which will become relevant when we start doing Fourier analysis on functions over lattices.
 
-\begin{definition}\label{def:dual-lattice}\lean{LinearMap.BilinForm.dualSubmodule}\leanok%\lean{def:dual-lattice}\leanok
-  The \emph{dual lattice} of a lattice $\Lambda$ is the set
-  \[ \Lambda^* := \setof{v \in \R^d}{\forall l \in \Lambda, \left\langle v,l \right\rangle \in \Z} \]
-\end{definition}
+\inputleannode{LinearMap.BilinForm.dualSubmodule}
 
 % As one might expect,
-% \begin{theorem}\label{thm:dual-lattice-is-lattice}\uses{def:dual-lattice}%\lean{thm:dual-lattice-is-lattice}
+% \begin{theorem}\label{thm:dual-lattice-is-lattice}\uses{LinearMap.BilinForm.dualSubmodule}%\lean{thm:dual-lattice-is-lattice}
 %   The dual of a lattice is also a lattice.
 % \end{theorem}
 % \begin{proof}
@@ -25,9 +20,7 @@ There is also a corresponding dual notion, which will become relevant when we st
 
 We can now define periodic sphere packings.
 
-\begin{definition}\label{PeriodicSpherePacking}\lean{PeriodicSpherePacking}\uses{SpherePacking, IsZLattice}\leanok
-  We say that a sphere packing $\Pa(X)$ is ($\Lambda$-)\emph{periodic} if there exists a lattice $\Lambda \subset \R^d$ such that for all $x \in X$ and $y \in \Lambda$, $x + y \in X$ (ie, $X$ is $\Lambda$-periodic).
-\end{definition}
+\inputleannode{PeriodicSpherePacking}
 
 % \begin{lemma}\label{PeriodicSpherePacking.instAddAction}\lean{PeriodicSpherePacking.instAddAction}\uses{PeriodicSpherePacking}\leanok
 %   If $\Pa(X)$ is a $\Lambda$-periodic sphere packing, then $\Lambda$ acts on $X$ by translation.
@@ -36,7 +29,7 @@ We can now define periodic sphere packings.
 %   This is immediate from the definition of a periodic sphere packing.
 % \end{proof}
 
-There is a natural definition of density for periodic sphere packings, namely the ``local'' density of balls in a fundamental domain. However, \textit{a priori} the density of sphere packing above need not to coincide with this alternative definition. In \cref{theorem:psp-density}, we will prove that this is the case.
+There is a natural definition of density for periodic sphere packings, namely the ``local'' density of balls in a fundamental domain. However, \textit{a priori} the density of sphere packing above need not to coincide with this alternative definition. In \cref{PeriodicSpherePacking.density_eq}, we will prove that this is the case.
 
 Now that we have simplified the process of computing the packing densities of specific packings, we can simplify that of computing the sphere packing constant. It turns out that once again, periodicity is key.
 
