--- a/blueprint/src/subsections/main-result.tex
+++ b/blueprint/src/subsections/main-result.tex
@@ -2,11 +2,11 @@
 
 With the terminologies above, we can state the main theorem of this project.
 
-\begin{theorem}\label{theorem:CE_Main}\uses{E8-Lattice,SpherePackingConstant,SpherePacking.density,E8Packing-density,thm:g,thm:Cohn-Elkies-general}
-  All \emph{periodic} packing $\mathcal{P} \subseteq \R^8$ has density satisfying $\Delta_{\mathcal{P}} \leq \Delta_{E_8} = \frac{\pi^4}{384}$, the density of the $E_8$ sphere packing (see \cref{E8Packing}).
+\begin{theorem}\label{theorem:CE_Main}\uses{E8.E8_Lattice, SpherePackingConstant, SpherePacking.density, E8.E8Packing_density, thm:g, LinearProgrammingBound}
+  All \emph{periodic} packing $\mathcal{P} \subseteq \R^8$ has density satisfying $\Delta_{\mathcal{P}} \leq \Delta_{E_8} = \frac{\pi^4}{384}$, the density of the $E_8$ sphere packing (see \cref{E8.E8Packing}).
 \end{theorem}
 \begin{proof}
-  Directly follows from \Cref{thm:Cohn-Elkies-general} applied to the function $f(x)=g(x/\sqrt{2})$ of \Cref{thm:g}.
+  Directly follows from \Cref{LinearProgrammingBound} applied to the function $f(x)=g(x/\sqrt{2})$ of \Cref{thm:g}.
   % TODO: Add a \ref to the actual proof at the end of this blueprint, I guess.
 \end{proof}
 
@@ -17,9 +17,4 @@ With the terminologies above, we can state the main theorem of this project.
   This is a direct consequence of Theorem \cref{thm:periodic-packing-optimal} and \cref{theorem:CE_Main}.
 \end{proof}
 
-\begin{corollary}\label{MainTheorem}\uses{corollary:upper-bound-E8}\lean{SpherePacking.MainTheorem}
-  $\Delta_8 = \Delta_{E_8}$.
-\end{corollary}
-\begin{proof}
-  By definition, $\Delta_{E_8} \leq \Delta_8$, while \cref{corollary:upper-bound-E8} shows $\Delta_8 = \sup_{\mathrm{packing} \, \mathcal{P}} \leq \Delta_{E_8}$, and the result follows.
-\end{proof}
+\inputleannode{SpherePacking.MainTheorem}
