--- a/blueprint/src/subsections/modform-ineq.tex
+++ b/blueprint/src/subsections/modform-ineq.tex
@@ -27,7 +27,7 @@ for all $t > 0$.
 Here we formalize the proof of the inequalities by Lee \cite{Lee}.
 First, we can rewrite the inequality in \ref{prop:ineqA} as follows.
 
-\begin{definition}\label{def:FG-definition}\uses{def:E2, def:Ek, def:H2-H3-H4}
+\begin{definition}\label{def:FG-definition}\uses{E₂_eq, ModularForm.eisensteinSeries_MF, def:H2-H3-H4}
 Define two (quasi) modular forms as
 \begin{align}
     F(z) &= (E_2(z) E_4(z) - E_6(z))^2 \label{eqn:defF} \\
@@ -47,7 +47,7 @@ We have
 \eqref{eqn:psiS-G} is already shown in Lemma \ref{lemma:psiS-new}.
 \end{proof}
 
-\begin{lemma}\label{lemma:ineqABnew-equiv}\uses{lemma:F-G-phi-psi-identities, def:psiI-psiT-psiS, cor:disc-pos}
+\begin{lemma}\label{lemma:ineqABnew-equiv}\uses{lemma:F-G-phi-psi-identities, def:psiI-psiT-psiS, Delta_im_line}
 Inequality \eqref{eqn:ineqA} and \eqref{eqn:ineqB} are equivalent to
 \begin{align}
     F(it) + \frac{18}{\pi^2} G(it) > 0 \label{eqn:ineqAnew} \\
@@ -64,14 +64,14 @@ Combined with Lemma \ref{lemma:F-G-phi-psi-identities} we can rewrite \eqref{eqn
 \begin{equation}
     A(t) = -t^2 \phi_0\left(\frac{i}{t}\right) + \frac{36}{\pi^2} \psi_S\left(\frac{i}{t}\right) < 0 \Leftrightarrow \frac{F(it)}{\Delta(it)} + \frac{18}{\pi^2} \frac{G(it)}{\Delta(it)} > 0
 \end{equation}
-for $t > 0$, which is equivalent to \eqref{eqn:ineqAnew} by Corollary \ref{cor:disc-pos}.
+for $t > 0$, which is equivalent to \eqref{eqn:ineqAnew} by Corollary \ref{Delta_im_line}.
 Equivalences of \eqref{eqn:ineqB} and \eqref{eqn:ineqBnew} follows similarly; just change the sign.
 \end{proof}
 
 
 Now, the first inequality \eqref{eqn:ineqAnew} follows from the positivity of each $F(it)$ and $G(it)$.
 
-\begin{lemma}\label{lemma:F-G-pos}\uses{thm:ramanujan-formula, cor:theta-pos}
+\begin{lemma}\label{lemma:F-G-pos}\uses{ramanujan_E₂, cor:theta-pos}
 For all $t > 0$, we have $F(it) > 0$ and $G(it) > 0$.
 \end{lemma}
 \begin{proof}
@@ -90,7 +90,7 @@ This directly follows from Lemma \ref{lemma:F-G-pos}.
 \end{proof}
 
 To prove the second inequality \eqref{eqn:ineqBnew}, we need some identities satisfied by $F$ and $G$.
-\begin{lemma}\label{lemma:F-G-de}\uses{thm:ramanujan-formula, thm:serre-der-prod-rule, prop:theta-der, lemma:lv1-lv2-identities}
+\begin{lemma}\label{lemma:F-G-de}\uses{ramanujan_E₂, serre_D_mul, prop:theta-der, lemma:lv1-lv2-identities}
 $F$ and $G$ satisfy the following differential equations:
 \begin{align}
     \partial_{12}\partial_{10} F - \frac{5}{6} E_{4} F &= 7200 \Delta (-E_{2}') \label{eqn:ddf} \\
@@ -99,7 +99,7 @@ $F$ and $G$ satisfy the following differential equations:
 \end{lemma}
 \begin{proof}
 Both can be shown by direct computations.
-By Ramanujan's identities (Theorem \ref{thm:ramanujan-formula}) and the product rule of Serre derivatives (Theorem \ref{thm:serre-der-prod-rule}), we have
+By Ramanujan's identities (Theorem \ref{ramanujan_E₂}) and the product rule of Serre derivatives (Theorem \ref{serre_D_mul}), we have
 \begin{align}
     \partial_{5} (E_2 E_4 - E_6) &= (E_2 E_4 - E_6)' - \frac{5}{12} E_2 (E_2 E_4 - E_6) \\
     &= \frac{E_2^2 - E_4}{12} \cdot E_4 + E_2 \cdot \frac{E_2 E_4 - E_6}{3} - \frac{E_2 E_6 - E_4^2}{2} - \frac{5}{12}E_2 (E_2 E_4 - E_6) \\
@@ -127,15 +127,15 @@ which proves \eqref{eqn:ddf}.
 Similarly, \eqref{eqn:ddg} can be proved using Proposition \ref{prop:theta-der} and Lemma \ref{lemma:lv1-lv2-identities}.
 \end{proof}
 
-\begin{corollary}\label{cor:F-G-de}\uses{lemma:F-G-de, cor:disc-pos, cor:theta-pos, def:E2}
+\begin{corollary}\label{cor:F-G-de}\uses{lemma:F-G-de, Delta_im_line, cor:theta-pos, E₂_eq}
 \eqref{eqn:ddf} (resp. \eqref{eqn:ddg}) is positive (resp. negative) on the (positive) imaginary axis.
 \end{corollary}
 \begin{proof}
-From \eqref{eqn:E2} and Lemma \ref{cor:disc-pos},
+From \eqref{eqn:E2} and Lemma \ref{Delta_im_line},
 \begin{equation}
     7200 (-E_2'(it)) \Delta(it) = 7200 \cdot 24 \left(\sum_{n \ge 1} n \sigma_1(n) e^{-2 \pi n t}\right) \cdot \Delta(it) > 0. \notag
 \end{equation}
-Negativity of \eqref{eqn:ddg}, i.e. $-640 \Delta(it) H_2(it) < 0$ follows from Corollary \ref{cor:theta-pos} and \ref{cor:disc-pos}.
+Negativity of \eqref{eqn:ddg}, i.e. $-640 \Delta(it) H_2(it) < 0$ follows from Corollary \ref{cor:theta-pos} and \ref{Delta_im_line}.
 \end{proof}
 
 
@@ -146,7 +146,7 @@ Since $G(it) > 0$ for all $t > 0$, we can define the quotient
 \end{equation}
 as a function on $(0, \infty)$.
 
-\begin{lemma}\label{lemma:Qlim}\uses{lemma:E2-transform-S, lemma:Ek-is-modular-form, lemma:theta-transform-S-T}
+\begin{lemma}\label{lemma:Qlim}\uses{E₂_transform, EisensteinSeries.eisensteinSeries_SIF, H₂_T_action}
 We have
 \begin{equation}\label{eqn:Qlim}
     \lim_{t \to 0^+} Q(t) = \frac{18}{\pi^2}.
@@ -172,7 +172,7 @@ From $\lim_{t \to \infty} E_4(it) = 1 = \lim_{t \to \infty}H_{4}(it)$, we get
 \end{align}
 \end{proof}
 
-\begin{proposition}\label{prop:Qdec}\uses{thm:ramanujan-formula, thm:serre-der-prod-rule, cor:F-G-de, thm:anti-serre-der-pos}
+\begin{proposition}\label{prop:Qdec}\uses{ramanujan_E₂, serre_D_mul, cor:F-G-de, thm:anti-serre-der-pos}
 The function $t \mapsto Q(t)$ is monotone decreasing.
 \end{proposition}
 
@@ -210,7 +210,7 @@ and by Lemma \ref{lemma:F-G-pos}, \eqref{eqn:ineqBnew} follows.
 
 Finally, we are ready to prove Theorem~\ref{thm:g}.
 \begin{theorem}\label{thm:g1}
-\uses{prop:a-fourier, prop:b-fourier, prop:a-double-zeros, prop:b-double-zeros, prop:ineqA, prop:ineqB, prop:a0, prop:b0}
+\uses{MagicFunction.a.Fourier.eig_a, MagicFunction.b.Fourier.eig_b, prop:a-double-zeros, prop:b-double-zeros, prop:ineqA, prop:ineqB, MagicFunction.a.SpecialValues.a_zero, MagicFunction.b.SpecialValues.b_zero}
 The function
 $$g(x):=\frac{\pi\,i}{8640}a(x)+\frac{i}{240\pi}\,b(x)$$
 satisfies conditions \eqref{eqn:g1}--\eqref{eqn:g3}.
@@ -227,6 +227,6 @@ Next, we prove \eqref{eqn:g2}. By Propositions~\ref{prop:a-another-integral} and
 where $$B(t)=-t^2\phi_0(i/t)+\frac{36}{\pi^2}\,\psi_I(it).$$
 
 
-Finally, the property \eqref{eqn:g3} readily follows from Proposition~\ref{prop:a0} and Proposition~\ref{prop:b0}.
+Finally, the property \eqref{eqn:g3} readily follows from Proposition~\ref{MagicFunction.a.SpecialValues.a_zero} and Proposition~\ref{MagicFunction.b.SpecialValues.b_zero}.
 This finishes the proof of Theorems~\ref{thm:g1} and~\ref{thm:g}.
 \end{proof}
